<resources>
    <string name="app_name">Basic-Banking-App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="profile_image">Profile Image</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="phone">Phone:</string>
    <string name="balance">Balance:</string>
    <string name="select_a_client">Select a client</string>
    <string name="amount">$%.2f</string>
    <string name="transactions">Transactions</string>
    <string name="customers">customers</string>
    <string name="arrow">arrow</string>
    <string name="logo">logo</string>
    <string name="basic_bank_system">Basic Bank system</string>
    <string name="client_details">Client Details</string>
    <string name="transfer_money">Transfer Money</string>
    <string name="from_label">From:</string>
    <string name="to_label">To:</string>
    <string name="amount_label">Amount:</string>
    <string name="bank_title">Basic Banking App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="SuccessfullyCompleted">Transaction Successfully Completed</string>
    <string name="AnountCanNotBeEmpty">Amount can not be empty</string>
    <string name="YouDoNotHaveEnophBalance">You do not have enough balance</string>
    <string name="EnterAmount">Enter Amount</string>

</resources>